# hs-halite

./: README.md  halite.cabal
src/: Halite.hs
