name:                halite
version:             1.0.0
synopsis:            Halite AI Challenge Base
description:         This module implements the basic communication with the
                     Halite server.
homepage:            https://github.com/lovasko/hs-halite
license:             OtherLicense
license-file:        LICENSE
author:              Daniel Lovasko <daniel.lovasko@gmail.com>
maintainer:          Daniel Lovasko <daniel.lovasko@gmail.com>
copyright:           2017 Daniel Lovasko
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Halite
  build-depends:       base >= 4.7 && < 5
                     , monad-loops
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lovasko/hs-halite
